fixed responsive collapse button

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -79,13 +79,11 @@ span {
 
 /* JOIN PAGE */
 #join-title {
-  margin: 20px 40px;
-}
+  margin: 20px 40px; }
 
 #join-form {
   width: 50%;
-  margin: 0 auto;
-}
+  margin: 0 auto; }
 
 /* MAP */
 #map {
